terraform/alastria/resources.tf
resource "aws_security_group" "alastria-node-ports" {
  name        = "default-alastria-ports"
  description = "Security group to connect and syc Alastria nodes"

  ingress {
    from_port   = 21000
    to_port     = 21000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 21000
    to_port     = 21000
    protocol    = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
